crates/analyzer/tests/snapshots/errors__non_bool_and.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: type mismatch
  ┌─ [snippet]:5:13
  │
5 │   x = x and y
  │             ^ this has type `u256`; expected type `bool`


